Bug 1503173: When deciding whether a flex item needs a final reflow, check RELATIVE_BSIZE state bit on its children. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D25441

--HG--
extra : moz-landing-system : lando